--- a/views/footer.ejs
+++ b/views/footer.ejs
@@ -1,3 +1,7 @@
-</article>
+</div>
+<footer class="footer">
+    <p>&copy; 2016 Company, Inc.</p>
+</footer>
+</div><!-- /container -->
 </body>
 </html>
