注册登录流程,flash消息

--- a/views/header.ejs
+++ b/views/header.ejs
@@ -26,6 +26,10 @@
     </div>
 
     <div class="bodyer">
+        <% if(locals.messages){ %>
+        <%- include('flash-messages') %>
+        <% } %>
+
 
 
 
