--- a/views/notify.html
+++ b/views/notify.html
@@ -1,19 +1,28 @@
 <%- include header %>
 
-<div>
-    <% if(typeof(error) !== 'undefined' && error){ %>
-    <div class="alert alert-error">
-        <strong><%= error %></strong>
+<div class="panel">
+    <div class='header'>
+        <ul class='breadcrumb'>
+            <li><a href='/'>主页</a><span class='divider'></span></li>
+            <li class='active'>通知</li>
+        </ul>
     </div>
-    <% } %>
 
-    <% if(typeof(success) !== 'undefined' && success){ %>
-    <div class="alert alert-success">
-        <strong><%= success %></strong>
+    <div>
+        <% if(typeof(error) !== 'undefined' && error){ %>
+        <div class="alert alert-error">
+            <strong><%= error %></strong>
+        </div>
+        <% } %>
+
+        <% if(typeof(success) !== 'undefined' && success){ %>
+        <div class="alert alert-success">
+            <strong><%= success %></strong>
+        </div>
+        <% } %>
+
+        <a href="<%- typeof(referer) !== 'undefined' ? referer : '/' %>"><span class="span-common">返回</span></a>
     </div>
-    <% } %>
-
-    <a href="<%- typeof(referer) !== 'undefined' ? referer : '/' %>"><span class="span-common">返回</span></a>
 </div>
 
 <%- include footer %>
