--- a/views/signup.html
+++ b/views/signup.html
@@ -4,7 +4,7 @@
     <div class='panel'>
         <div class='header'>
             <ul class='breadcrumb'>
-                <li><a href='/'>主页</a><span class='divider'>/</span></li>
+                <li><a href='/'>主页</a><span class='divider'></span></li>
                 <li class='active'>注册</li>
             </ul>
         </div>
@@ -25,42 +25,39 @@
                     <label class='col-sm-2 control-label' for='loginname'>用户名</label>
 
                     <div class='col-sm-5'>
-                        <% if (typeof(loginname) !== 'undefined') { %>
-                        <input type="email" class='form-control' id='loginname' name='loginname' size='30' value='<%= loginname %>'/>
-                        <% } else { %>
-                        <input type="email" class='form-control' id='loginname' name='loginname' size='30' value=''/>
-                        <% } %>
-                    </div>
-                </div>
-                <div class='control-group'>
-                    <label class='control-label' for='pass'>密码</label>
 
-                    <div class='controls'>
-                        <input class='input-xlarge' id='pass' name='pass' size='30' type='password'/>
-                    </div>
-                </div>
-                <div class='control-group'>
-                    <label class='control-label' for='re_pass'>确认密码</label>
+                        <input type="text" class='form-control' id='loginname' name='loginname' size='30' value='<%= locals.loginname %>' required/>
 
-                    <div class='controls'>
-                        <input class='input-xlarge' id='re_pass' name='re_pass' size='30' type='password'/>
                     </div>
                 </div>
-                <div class='control-group'>
-                    <label class='control-label' for='email'>电子邮箱</label>
+                <div class='form-group'>
+                    <label class='col-sm-2 control-label' for='email'>电子邮箱</label>
 
-                    <div class='controls'>
-                        <% if (typeof(email) !== 'undefined') { %>
-                        <input class='input-xlarge' id='email' name='email' size='30' type='text' value='<%= email %>'/>
-                        <% } else { %>
-                        <input class='input-xlarge' id='email' name='email' size='30' type='text'/>
-                        <% } %>
+                    <div class='col-sm-5'>
+                        <input class='form-control' id='email' name='email' size='30' type='email' value='<%= locals.email %>' required/>
                     </div>
                 </div>
+                <div class='form-group'>
+                    <label class='col-sm-2 control-label' for='pass'>密码</label>
+
+                    <div class='col-sm-5'>
+                        <input class='form-control' id='pass' name='pass' size='30' type='password' required/>
+                    </div>
+                </div>
+                <div class='form-group'>
+                    <label class='col-sm-2 control-label' for='re_pass'>确认密码</label>
+
+                    <div class='col-sm-5'>
+                        <input class='form-control' id='re_pass' name='re_pass' size='30' type='password' required/>
+                    </div>
+                </div>
+
                 <input type='hidden' name='_csrf' value='<%= locals.csrf %>'/>
 
-                <div class='form-actions'>
-                    <input type='submit' class='span-primary' value='注册'/>
+                <div class="form-group">
+                    <div class="col-sm-offset-2 col-sm-10">
+                        <button type="submit" class="btn btn-primary">注册</button>
+                    </div>
                 </div>
             </form>
             <% } %>
